--- a/style.css
+++ b/style.css
@@ -80,3 +80,9 @@ form {
     width: 100px;
     height: 35px;
 }
+
+@media (max-width: 400px) {
+    body {
+        background-color: red;
+    }
+}
